Closed
Bug 1280546
Opened 5 years ago
Closed 5 years ago
Disable macOS Sierra 10.12 Window Tabs
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
mozilla50
People
(Reporter: camden.narzt, Assigned: mstange)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
58 bytes,
text/x-review-board-request
|
spohl
:
review+
Sylvestre
:
approval-mozilla-aurora+
|
Details |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:49.0) Gecko/20100101 Firefox/49.0 Build ID: 20160616004032 Steps to reproduce: watched http://devstreaming.apple.com/videos/wwdc/2016/203x2w42att1kdzg1ce/203/hls_vod_mvp.m3u8 Actual results: They mentioned (around ~16:29) that applications using appkit need to disable the new window tabs that are introduced in macOS 10.12 Sierra or else you'll windo up with two different tab sets fighting. Expected results: call allowsAutomaticWindowTabbing:false on NSWindow before creating any windows
Component: Untriaged → Widget: Cocoa
OS: Unspecified → Mac OS X
Product: Firefox → Core
Hardware: Unspecified → x86
Assignee | ||
Comment 1•5 years ago
|
||
Thank you for filing this bug.
Assignee | ||
Comment 2•5 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/61706/diff/#index_header See other reviews: https://reviewboard.mozilla.org/r/61706/
Attachment #8766994 -
Flags: review?(spohl.mozilla.bugs)
Updated•5 years ago
|
Attachment #8766994 -
Flags: review?(spohl.mozilla.bugs) → review+
Comment 3•5 years ago
|
||
Comment on attachment 8766994 [details] Bug 1280546 - Disable automatic NSWindow tabbing on 10.12. https://reviewboard.mozilla.org/r/61706/#review58572
Pushed by mstange@themasta.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/6041ca217693 Disable automatic NSWindow tabbing on 10.12. r=spohl
Assignee | ||
Updated•5 years ago
|
Assignee: nobody → mstange
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Comment 5•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/6041ca217693
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox50:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 6•5 years ago
|
||
Comment on attachment 8766994 [details] Bug 1280546 - Disable automatic NSWindow tabbing on 10.12. Approval Request Comment [Feature/regressing bug #]: macOS 10.12 Sierra [User impact if declined]: The user may see two tab rows in their window - one provided by Firefox and one provided by the system. I haven't actually seen this happen, but it's a bit magic so maybe I just don't know how to trigger it. [Describe test coverage new/current, TreeHerder]: none [Risks and why]: extremely low [String/UUID change made/needed]: none
Attachment #8766994 -
Flags: approval-mozilla-aurora?
Updated•5 years ago
|
Comment 7•5 years ago
|
||
Comment on attachment 8766994 [details] Bug 1280546 - Disable automatic NSWindow tabbing on 10.12. Improve mac os x support on 10.12, taking it
Attachment #8766994 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 8•5 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-aurora/rev/385b9ea08ff7
You need to log in
before you can comment on or make changes to this bug.
Description
•