Bug 1280546 - Disable automatic NSWindow tabbing on 10.12. r=spohl

MozReview-Commit-ID: AnDmvWDMgsg